backend-container/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: dad-pass
    labels:
        app: dad-pass
        name: dad-pass
