backend-container/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: dad-pass
    namespace: dad-pass
    labels:
        app: dad-pass
spec:
    type: ClusterIP
    selector:
        app: dad-pass
    ports:
        - name: http
          protocol: TCP
          port: 80
          targetPort: 8000
